# iowa_liquor

./: .gitignore  Makefile  README.md  notes.md  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
analytics/: Dockerfile  docker-compose.yaml
analytics/dbt/: schema.yml  stg_iowa_liquor_sales.sql
analytics/liquor_sales_iowa/: dbt_project.yml
analytics/liquor_sales_iowa/models/core/: bottle_size_analysis.sql  county_sales_analysis.sql  geospatial_sales.sql  liquor_deserts.sql  liquor_price_trends.sql  monthly_sales_analysis.sql  price_elasticity.sql  product_affinity.sql  sales_forecast.sql  store_clustering.sql  top_performing_stores.sql  top_selling_categories.sql
analytics/liquor_sales_iowa/models/staging/: schema.yml  stg_iowa_liquor.sql
analytics/sqls/: bottle_size_analysis.sql  county_sales_analysis.sql  geospatial_sales.sql  liquor_deserts.sql  liquor_price_trends.sql  monthly_sales_analysis.sql  price_elasticity.sql  product_affinity.sql  sales_forecast.sql  store_clustering.sql  top_performing_stores.sql  top_selling_categories.sql
config/: dbt.md  kestra.md
docs/: wf.md  workflow.md
orchestration/: addFlow.sh
orchestration/flows/: 01_gcp_iowa_liquor.yaml  02_gcp_iowa_liquor_scheduled.yaml
